--- a/home/vscode/.config/Code - OSS/User/settings.json
+++ b/home/vscode/.config/Code - OSS/User/settings.json
@@ -2,5 +2,9 @@
     "window.zoomLevel": 2,
     "workbench.colorTheme": "One Dark Pro",
     "editor.fontSize": 16,
-    "editor.fontFamily": "'Fira Code Mono', 'monospace', monospace"
+    "editor.fontFamily": "'FiraCode Nerd Font Mono', 'monospace', monospace",
+    "python.defaultInterpreterPath": "python3",
+    "python.experiments.enabled": false,
+    "editor.fontLigatures": true,
+    "python.linting.mypyEnabled": true,
 }
