--- a/home/i3wm/.i3/config
+++ b/home/i3wm/.i3/config
@@ -370,7 +370,7 @@ exec_always --no-startup-id fix_xcursor
 
 # Bind workspaces to second monitor
 workspace $ws1 output HDMI-0
-workspace $ws2 output DP-2
+workspace $ws2 output DP-3 DP-2
 workspace $ws3 output DP-2
 workspace $ws4 output DP-2
 
